initial spacing fixed

--- a/public/stylesheets/nav.scss
+++ b/public/stylesheets/nav.scss
@@ -15,6 +15,9 @@ nav.main {
   a, a:link, a:visited {
     color: #FFFFFF;
   }
+  a.active {
+    color: #6699FF;
+  }
 
   a {
     display: block;
@@ -34,6 +37,7 @@ nav.main {
     a:hover {
       background-color: rgba(128, 128, 128, 0.3);
     }
-
   }
 }
+
+
